🍋🏋 Checkpoint ./public/js/streamer.js:37906304/400314 ./views/streamer.ejs:37906304/203

--- a/views/streamer.ejs
+++ b/views/streamer.ejs
@@ -190,6 +190,9 @@
                         <button id="wbResetViewBtnV2Streamer" class="control-btn wb-tool-btn" title="Reset góc nhìn (0)">
                             <i class="fas fa-expand-arrows-alt"></i>
                         </button>
+          <button id="wbToggleGridBtnV2Streamer" class="control-btn wb-tool-btn" title="Ẩn/Hiện lưới (G)">
+                            <i class="fas fa-border-all"></i>
+                        </button>
             <button id="wbClearBtnV2" class="wb-tool-btn control-btn" data-tooltip="Xóa toàn bộ"><i class="fas fa-trash-alt"></i></button>
             <button id="closeWhiteboardBtnV2" class="wb-tool-btn control-btn" data-tooltip="Đóng bảng trắng"><i class="fas fa-times"></i></button>
         </div>
